--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -95,15 +95,27 @@
         background-color:white;
         overflow: hidden;
         position: relative;
-        &__sideIcon{
+        &__sideFilter{
           position: absolute;
             top: 50%;
             left:-5%;
             transform: translateY(-50%)translateX(-50%);
-          background-color: gray;
+            z-index: 0;
           width: 50vh;
           height: 50vh;
           border-radius: 50%;
+          filter: brightness(0) invert(0.8);
+          transition-duration: 0.3s;
+        }
+        &__sideIcon{
+          // background-color: red;
+          position: absolute;
+            top: 50%;
+            left:6%;
+            transform: translateY(-50%)translateX(-50%);
+            z-index: 1;
+          width: 5vh;
+          height: 5vh;
           img{
             position: absolute;
               top: 50%;
@@ -165,10 +177,14 @@
               top:50%;
               left: 90%;
               transform: translateY(-50%)translateX(-50%);
-              text-align: center;
             width: 10%;
             height: 5vh;
+            overflow: hidden;
             i{
+              position: absolute;
+              top:50%;
+              left: 50%;
+              transform: translateY(-50%)translateX(-50%);
               line-height: 5vh;
               font-size: 2em;
               -webkit-text-stroke: 3.3px $gray;
