--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -27,6 +27,7 @@
   width: 80vw;
   // hedding------------------------------------------------
   &__hedding{
+    font-family: 'Roboto';
     padding-top: 8vh;
     text-align: center;
     width: 100%;
