--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -11,7 +11,7 @@
   .main
     .profile
       .profile__hedding
-        Profile
+        PROFILE
       .profile__tables
         %table
           %tr
