--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -37,27 +37,42 @@ a{
 }
 
 body {
+  font-family: "hare";
 	color: $black;
-	font-family: hare;
 	line-height: 1;
 	font-size: 1.4rem;
 }
+
 ol, ul, li{
 	list-style: none;
 	color: inherit;
 }
+
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 *{
 	box-sizing: border-box;
+}
+
+h1{
+  font-family: 'Roboto';
+  font-size: 60px;
+}
+h2{
+  font-family: 'Roboto';
+  font-size: 10px;
+  letter-spacing: 2px;
 }
