--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,4 +4,4 @@
   src: asset_url('Harenosora.otf') format('opentype');
 }
 // 英語アイキャッチ,font-family: 'Roboto', sans-serif;
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
