--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -70,6 +70,9 @@ table {
 h1{
   font-family: 'Roboto';
   font-size: 60px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  color: $black;
 }
 h2{
   font-family: 'Roboto';
