--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -6,7 +6,6 @@
   height: 100vh;
   position: relative;
   &__nameBox{
-    @include animation-blur;
     @include position-center;
     &--engineer{
       font-size: 20px;
@@ -14,13 +13,15 @@
     }
     &--myName{
       margin-top: 10px;
-      font-size: 35px;
+      h1{
+        font-size: 80px;
+      }
     }
   }
 }
 // main================================================================================================
 .main{
-  display: none;
+  // display: none;
 // profile================================================
 .profile{
   margin: 0 auto;
