--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -6,7 +6,15 @@
       .top__nameBox--engineer
         engineer
       .top__nameBox--myName
-        オカヤマ カナタ
+        .text1
+          %h1 I'M
+        .line1
+        .text2
+          %h1 KANATA
+        .line2
+        .text3
+          %h1  OKAYAMA
+        .line3
   -# main================================================
   .main
     .profile
