--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -71,8 +71,8 @@ h1{
   font-family: 'Roboto';
   font-size: 60px;
   font-weight: 500;
-  letter-spacing: 5px;
-  color: $black;
+  letter-spacing: 3px;
+  color: black;
 }
 h2{
   font-family: 'Roboto';
