--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -2,19 +2,15 @@
 #index
   -# top================================================
   .top
-    .top__nameBox
-      .top__nameBox--engineer
-        engineer
-      .top__nameBox--myName
-        .text1
-          %h1 I'M
-        .line1
-        .text2
-          %h1 KANATA
-        .line2
-        .text3
-          %h1  OKAYAMA
-        .line3
+    .top__text1
+      %h1 I'M
+      .underLine
+    .top__text2
+      %h1 KANATA
+      .underLine
+    .top__text3
+      %h1 OKAYAMA
+      .underLine
   -# main================================================
   .main
     .profile
