--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -11,95 +11,81 @@
     .top__text3
       %h1 OKAYAMA
       .underLine
-  -# main================================================
-  .main
-    .profile
-      .profile__hedding
-        %h1 PROFILE
-      .profile__tables
-        %table
-          %tr
-            %th オカヤマ カナタ
-          %tr
-            %td 1992年6月9日生まれ、B型、双子座。
-        %table
-          %tr
-            %th 出身
-          %tr
-            %td 大阪府大阪市西成区
-        %table
-          %tr
-            %th{colspan:2} 略歴
-          %tr
-            %td 2018年
-            %td 同志社大学心理学部心理学科 卒業。
-          %tr
-            %td 2018年
-            %td 日本郵便株式会社 入社。
-          %tr
-            %td 2020年
-            %td エンジニアを目指し学習開始。
-        %table
-          %tr
-            %th{colspan:2} 趣味
-          %tr
-            %td コーヒー
-            %td 抽出だけでなく、焙煎やラテアートも。
-          %tr
-            %td カメラ
-            %td 最近始めたばかり。現像作業の勉強を開始。
-      .profile__moreBtn
-        =link_to(profiles_path) do
-          .profile__moreBtn--text.linkBtn
-            %h2 SHOW MORE
-            .profile__moreBtn--icon.arrow
-              =fa_icon "long-arrow-right"
-    -# skills================================================
-    .skills
-      .skills__hedding
-        %h1 SKILLS
-      .skills__topText
-        2020年。エンジニア転職を決意しプログラミング学習に取り組んできました。
-        %br 実務経験はまだありませんが、現時点での "オカヤマ カナタ" のスキルです。
+  -# profile================================================
+  .profile
+    .profile__hedding
+      %h1 PROFILE
+    .profile__tables
+      %table
+        %tr
+          %th 岡山 叶太
+          %td 1992年6月9日生まれ、B型、双子座。
+        %tr
+          %td{colspan:2} 大阪府大阪市西成区 出身。
+        %tr
+          %th 略歴
+          %td{colspan:2} 2018年 同志社大学心理学部心理学科 卒業。
+        %tr
+          %td{colspan:3} 2018年 日本郵便株式会社 入社。
+        %tr
+          %td{colspan:3} 2020年 エンジニアを目指し学習開始。
+        %tr
+          %th 趣味
+          %td{colspan:2} コーヒー 抽出だけでなく、焙煎やラテアートも。
+        %tr
+          %td{colspan:3} カメラ 最近始めたばかり。現像作業の勉強を開始。
+    .profile__moreBtn
+      =link_to(profiles_path) do
+        .profile__moreBtn--text.linkBtn
+          %h2 SHOW MORE
+          .profile__moreBtn--icon.arrow
+            =fa_icon "long-arrow-right"
+  -# skills================================================
+  .skills
+    .skills__hedding
+      %h1 SKILLS
+    .skills__topText
+      2020年。エンジニア転職を決意しプログラミング学習に取り組んできました。
+      %br 実務経験はまだありませんが、現時点での "オカヤマ カナタ" のスキルです。
 
-      .skills__wrapper
-        -@categories.each do |category|
-          .skills__wrapper__contentBox
-            .skills__wrapper__contentBox__skillBlock.skillBlock
-              .skills__wrapper__contentBox__skillBlock__sideFilter{style:"background-color: #{category.color}"}
-              .skills__wrapper__contentBox__skillBlock__sideIcon
-                =image_tag(category.icon)
-              .skills__wrapper__contentBox__skillBlock__name
-                =category.name
-              .skills__wrapper__contentBox__skillBlock__btn
-                =fa_icon "plus"
-            .skills__wrapper__contentBox__linkBlock.linkBlock
-              -category.contents.each do |apps|
-                .skills__wrapper__contentBox__linkBlock__contentRow
-                  .skills__wrapper__contentBox__linkBlock__contentRow--circle{style:"background-color: #{category.color}"}
-                  =link_to(content_path(apps.id)) do
-                    .skills__wrapper__contentBox__linkBlock__contentRow--name.name
-                      =apps.name
-                  .skills__wrapper__contentBox__linkBlock__contentRow--arrow
-                    =fa_icon "long-arrow-right"
+    .skills__wrapper
+      -@categories.each do |category|
         .skills__wrapper__contentBox
           .skills__wrapper__contentBox__skillBlock.skillBlock
-            .skills__wrapper__contentBox__skillBlock__sideFilter{style:"background-color: black"}
+            .skills__wrapper__contentBox__skillBlock__sideFilter{style:"background-color: #{category.color}"}
             .skills__wrapper__contentBox__skillBlock__sideIcon
-              =image_tag("icons/git.png")
+              =image_tag(category.icon)
             .skills__wrapper__contentBox__skillBlock__name
-              OTHER SKILLS
+              =category.name
             .skills__wrapper__contentBox__skillBlock__btn
               =fa_icon "plus"
           .skills__wrapper__contentBox__linkBlock.linkBlock
-            .skills__wrapper__contentBox__linkBlock__contentRow
-              .skills__wrapper__contentBox__linkBlock__contentRow--circle
-              .skills__wrapper__contentBox__linkBlock__contentRow--name
-                Git hub
-            .skills__wrapper__contentBox__linkBlock__contentRow
-              .skills__wrapper__contentBox__linkBlock__contentRow--circle
-              .skills__wrapper__contentBox__linkBlock__contentRow--name
-                SQL
+            -category.contents.each do |apps|
+              .skills__wrapper__contentBox__linkBlock__contentRow
+                .skills__wrapper__contentBox__linkBlock__contentRow--circle{style:"background-color: #{category.color}"}
+                =link_to(content_path(apps.id)) do
+                  .skills__wrapper__contentBox__linkBlock__contentRow--name.name
+                    =apps.name
+                .skills__wrapper__contentBox__linkBlock__contentRow--arrow
+                  =fa_icon "long-arrow-right"
+      .skills__wrapper__contentBox
+        .skills__wrapper__contentBox__skillBlock.skillBlock
+          .skills__wrapper__contentBox__skillBlock__sideFilter{style:"background-color: black"}
+          .skills__wrapper__contentBox__skillBlock__sideIcon
+            =image_tag("icons/git.png")
+          .skills__wrapper__contentBox__skillBlock__name
+            OTHER SKILLS
+          .skills__wrapper__contentBox__skillBlock__btn
+            =fa_icon "plus"
+        .skills__wrapper__contentBox__linkBlock.linkBlock
+          .skills__wrapper__contentBox__linkBlock__contentRow
+            .skills__wrapper__contentBox__linkBlock__contentRow--circle
+            .skills__wrapper__contentBox__linkBlock__contentRow--name
+              Git hub
+          .skills__wrapper__contentBox__linkBlock__contentRow
+            .skills__wrapper__contentBox__linkBlock__contentRow--circle
+            .skills__wrapper__contentBox__linkBlock__contentRow--name
+              SQL
 
     -# works================================================
     .works
