--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -15,6 +15,11 @@
   .profile
     .profile__hedding
       %h1 PROFILE
+    .profile__text
+      私のポートフォリオをご覧いただき誠にありがとうございます。
+      %br 2020年、エンジニアとして生きていくことを決意し、プログラミング学習を開始いたしました。
+      その想いの根幹は、「自らの手でつくりあげたい」という強い想いです。
+      %br エンジニアとして常に、楽しみ、挑戦し、突き詰めて、成長し続けたいと思います。
     .profile__tables
       %table
         %tr
