--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -40,24 +40,28 @@
     padding-top: 8vh;
     text-align: center;
     width: 100%;
-    height: 6vh;
+    height: 14vh;
     line-height: 6vh;
     font-size: 5vh;
   }
+//text------------------------------------------------
+  &__text{
+    text-align: center;
+    line-height: 5vh;
+    font-size: 2vh;
+    margin: 5vh 0;
+    // background-color:gray;
+  }
   // tables------------------------------------------------
   &__tables{
-    padding-top: 10vh;
     width:100%;
     line-height: 4vh;
     font-size: 2vh;
-    // background-color: gray;
     table{
-      // background-color: red;
       width: 45%;
       margin: 3vh auto;
     }
     th{
-      // background-color: skyblue;
       padding-right: 5%;
       width: 23%;
       font-weight: bold;
@@ -314,10 +318,10 @@
     transform:translateY(-50%);
     width: 14%;
     height: 100%;
-    font-size: 2em;
+    font-size: 3em;
     overflow: hidden;
     i{
-      -webkit-text-stroke: 3.3px white;
+      -webkit-text-stroke: 3.5px white;
       position: absolute;
         top: 50%;
         right: 30%;
