--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -77,3 +77,9 @@ h2{
   font-size: 10px;
   letter-spacing: 2px;
 }
+h3{
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+}
