--- a/app/views/templates/_footer.html.haml
+++ b/app/views/templates/_footer.html.haml
@@ -2,17 +2,17 @@
   -if request.path == root_path 
     .footerLinks
       .footerLinks--profile.jumpBtn
-        PROFILE
+        %h3 PROFILE
         .footerLinks--line
       .footerLinks--skills.jumpBtn
-        SKILLS
+        %h3 SKILLS
         .footerLinks--line
       .footerLinks--works.jumpBtn
-        WORKS
+        %h3 WORKS
         .footerLinks--line
   - else
     .footerLinks
       .footerLinks--back.jumpBtn
-        =link_to("BACK",root_path)
+        %h3=link_to("BACK",root_path)
         .footerLinks--line
 
