--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -75,11 +75,18 @@ h1{
 h2{
   font-family: 'Roboto';
   font-size: 10px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
+  color: $black;
 }
 h3{
   font-family: 'Roboto';
   font-weight: 500;
   font-size: 20px;
   cursor: pointer;
+}
+th{
+  font-family: 'Roboto';
+  font-size: 10px;
+  letter-spacing: 1px;
+  color: $black;
 }
