--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,6 +3,8 @@ $gray:rgb(175, 174, 174);
 $l_gray:rgb(226, 226, 226);
 $blue:rgb(196, 242, 252);
 $d_brown:rgb(207, 191, 177);
-$brown:rgb(238, 230, 224);
 
+$base1:rgb(207, 77, 18);
+$base2:rgb(62, 60, 65);
+$base3:rgb(247, 238, 224);
 
